[gd_scene load_steps=2 format=3 uid="uid://5dy04mf1top1"]

[ext_resource type="Script" path="res://addons/dialogue_editor_plugin/dialogue_editor/editor_nodes/map_scene_nodes/scripts/bool_variable_setter.gd" id="1_h1fbw"]

[node name="BoolVariableSetter" type="GraphNode"]
offset_right = 200.0
offset_bottom = 120.0
title = "Change Bool Var Value"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_h1fbw")

[node name="VariableSetter" type="Button" parent="."]
layout_mode = 2
text = "Assign Bool Variable"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "New Value"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "True"
popup/item_0/id = 1
popup/item_1/text = "False"
popup/item_1/id = 1

[node name="VariableSelectDialog" type="AcceptDialog" parent="."]
initial_position = 1
size = Vector2i(150, 200)

[node name="VariableList" type="ItemList" parent="VariableSelectDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 142.0
offset_bottom = 151.0

[connection signal="pressed" from="VariableSetter" to="." method="_on_variable_setter_pressed"]
[connection signal="item_selected" from="HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_clicked" from="VariableSelectDialog/VariableList" to="." method="_on_variable_list_item_clicked"]
